--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/jest": "^24.0.11"
+    "@types/jest": "^24.0.11",
+    "lodash": "^4.17.15"
   }
 }
